alignment issue

--- a/ui.frontend/src/main/webpack/components/_chart.scss
+++ b/ui.frontend/src/main/webpack/components/_chart.scss
@@ -1,5 +1,4 @@
 .vg-chart {
-
   &__title {
     padding-bottom: 55px;
     text-align: center;
@@ -79,6 +78,14 @@
 
 @media screen and (max-width: 768px) {
   .vg-chart {
+
+    &__title {
+      font: normal normal 900 40px/45px 'Mark Pro Heavy';
+      span {
+        display: block;
+      }
+    }
+
     .vg-leftchart {
       display: flex;
       flex-direction: column-reverse;
@@ -90,7 +97,7 @@
       }
 
       &__left {
-        padding: 0% 7%;
+        padding: 0% 35px;
       }
 
       &__left__about {
@@ -111,9 +118,10 @@
       }
 
       &__right__image {
-        width: 86%;
-        padding: 7%;
+        width: 100%;
+        padding: 0 35px;
         transform: none;
+        box-sizing: border-box;
       }
 
       &__left__image {
@@ -122,9 +130,10 @@
 
       &__right__content {
         transform: none;
-        padding: 0% 7%;
+        padding: 0% 35px;
         border: none;
         margin-top: 0px;
+        margin-bottom: 48.5px;
       }
 
       &__left__content {
