--- a/ui.frontend/src/main/webpack/components/_teaser-expert-single.scss
+++ b/ui.frontend/src/main/webpack/components/_teaser-expert-single.scss
@@ -11,7 +11,7 @@
 		}
 
 		&__title {
-			font: normal normal 900 18px/30px Mark Pro;
+			font: normal normal 900 18px/30px 'Mark Pro Heavy';
 			width: 100%;
 			margin: .5rem 0;
 			color: #000000;
